--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,13 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #1954d2;
+$secondary : #981fb6;
+$accent    : #21b98c;
 
 $dark      : #1D1D1D;
 
-$positive  : #21BA45;
+$positive  : #21c236;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
