--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,8 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1954d2;
-$secondary : #981fb6;
+$primary   : #1944d2;
+$secondary : #b931c5;
 $accent    : #21b98c;
 
 $dark      : #1D1D1D;
